# IA_oso_player

./: .gitignore  README.md  pyproject.cpu.toml  pyproject.cuda.toml  pyproject.toml  test.ipynb
notebooks/: model_definition.ipynb  test.ipynb
scripts/: echo-client-catcher.py  echo-client-sender.py  echo-server.py  image_preprocessing_model.py  model.py  model_definition.py  model_thread.py  pipeline.py  pipeline_thread.py  reinforcement_model.py  tesseract_model.py
tmp/: screenshot  testarray
