[tool.poetry]
name = "ia-osu-player"
version = "0.1.0"
description = ""
authors = ["Elea Roche , Quentin Perret"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.24.0"
notebook = "^7.0.4"
ipykernel = "^6.25.2"
torch = ">=2.0.0, !=2.0.1"
jupyter = "^1.0.0"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
