[tool.poetry]
name = "ia-osu-player"
version = "0.1.0"
description = ""
authors = ["elroche <elroche@ensc.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.23.2"
torch = { url = "https://download.pytorch.org/whl/cu117/torch-2.0.0%2Bcu117-cp311-cp311-win_amd64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu117/torchvision-0.15.1%2Bcu117-cp311-cp311-win_amd64.whl"}
ipykernel = "^6.25.2"
jupyter = "^1.0.0"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
seaborn = "^0.12.2"
scikit-learn = "^1.3.1"
pylint = "^2.17.6"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"